# pdf_autofill

./: .gitignore  README.md
.github/workflows/: release.yml
backend/: .env.example  README.md  pdf_autofill_server.spec  pyproject.toml
backend/scripts/: build.bat  build.sh  build_exe.py  sync_deps.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: routes.py  schemas.py
backend/src/app/core/: config.py
backend/src/app/services/: ai_matcher_service.py  ocr_service.py
backend/tests/: __init__.py  test_api.py
extension/: .eslintrc.json  manifest.chrome.json  manifest.firefox.json  package-lock.json  package.json  tsconfig.json
extension/icons/: .gitkeep
extension/src/: background.ts  browser.ts  content.ts  popup.ts
extension/styles/: popup.css
typings/app/: __init__.pyi  main.pyi
typings/app/api/: __init__.pyi  routes.pyi  schemas.pyi
typings/app/core/: __init__.pyi  config.pyi
typings/app/services/: __init__.pyi  ai_matcher_service.pyi  ocr_service.pyi
